deployments/kube-server-deployment.yaml
apiVersion: apps/v1         
kind: Deployment              
metadata:
  name: kube-app-server    
  labels:                   
    app: kube-app-server
spec:
  replicas: 1                 
  selector:
    matchLabels:              
      app: kube-app-server
  template:                  
    metadata:
      labels:                
        app: kube-app-server
    spec:                     
      containers:
      - name: kube-app-server
        image: asarkisjan/kube-server:1.0.1
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 8080 
        resources:
          limits:
            cpu: '0.2'
            memory: "200Mi"
---
apiVersion: v1          
kind: Service                 
metadata:                     
  name: kube-app-server    
  labels:                    
    app: kube-app-server
spec:                         
  type: ClusterIP              
  selector:
    app: kube-app-server   
  ports:                   
  - name: http
    port: 8080
    targetPort: 8080
