deployments/mongo-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-app-mongo
  labels:
    app: kube-app
spec:
  ports:
    - port: 27017
  selector:
    app: kube-app
    tier: mongo
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-app-mongo
  labels:
    app: kube-app
spec:
  selector:
    matchLabels:
      app: kube-app
      tier: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kube-app
        tier: mongo
    spec:
      containers:
      - image: mongo:4.0.4
        name: mongo
        ports:
        - containerPort: 27017        
          name: mongo
        volumeMounts:
        - name: mongo-persistent-storage  
          mountPath: /data/db
        - name: mongodb-scripts
          mountPath: /docker-entrypoint-initdb.d
          readOnly: true
        - name: mongo-db-secret
          mountPath: /etc/mongo-db-secret
          readOnly: true
      volumes:                       
      - name: mongo-persistent-storage
        persistentVolumeClaim:
          claimName: mongo-pv-claim
      - name: mongo-db-secret
        secret:
          secretName: mongo-db-secret
          items:
          - key: user
            path: MONGO_USERNAME
            mode: 0444
          - key: password
            path: MONGO_PASSWORD
            mode: 0444
          - key: database
            path: MONGO_DATABASE
            mode: 0444
      - name: mongodb-scripts
        configMap:
          name: monogodb-config
          items:
          - key: init-mongo.js
            path: init-mongo.js
