deployments/mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-app-mysql
  labels:
    app: kube-app
spec:
  ports:
    - port: 3306
  selector:
    app: kube-app
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-app-mysql
  labels:
    app: kube-app
spec:
  selector:
    matchLabels:
      app: kube-app
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kube-app
        tier: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306        
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage  
          mountPath: /var/lib/mysql
      volumes:                       
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
